--- a/iteration-10-128.yaml
+++ b/iteration-10-128.yaml
@@ -10,7 +10,7 @@ train_steps: 3000000/${action_repeat}
 # planning
 iterations: 10
 num_samples: 512
-num_elites: 64 #가장 reward 높은 action 개수 #너무 적으면 편향, 너무 많으면 학습 오래걸림
+num_elites: 128 #가장 reward 높은 action 개수
 mixture_coef: 0.05
 min_std: 0.05 #minimum standard deviation
 temperature: 0.5
@@ -41,13 +41,13 @@ state_dim: 4
 
 # wandb (insert your own)
 use_wandb: true
-wandb_project: "tdmpc_car_dohyun" #project name
-wandb_entity: "sosvast-Seoul National University" #team project name
+wandb_project: "tdmpc_car" #project name
+wandb_entity: "49ball-Seoul National University" #team project name
 
 # mis(miscellaneous))
 seed: 1
 exp_name: default
-eval_freq: 50000
+eval_freq: 100000
 eval_episodes: 10
 save_video: true
 save_model: true
