--- a/cfgs/default.yaml
+++ b/cfgs/default.yaml
@@ -1,3 +1,6 @@
+#project
+project : "reward change"
+
 # environment
 task: car
 modality: 'state'
@@ -13,7 +16,6 @@ num_samples: 512
 num_elites: 64 #가장 reward 높은 action 개수 #너무 적으면 편향, 너무 많으면 학습 오래걸림
 mixture_coef: 0.05
 min_std: 0.05 #minimum standard deviation
-
 temperature: 0.5
 momentum: 0.1
 
