--- a/cfgs/default.yaml
+++ b/cfgs/default.yaml
@@ -44,8 +44,8 @@ state_dim: 4
 
 # wandb (insert your own)
 use_wandb: true
-wandb_project: "tdmpc_car" #project name
-wandb_entity: "49ball-Seoul National University" #team project name
+wandb_project: "rlmppi-proto1" #project name
+wandb_entity: "mkdusgml-seoul-national-university" #team project name
 
 # mis(miscellaneous))
 seed: 1
